test/src/e2e_vm_tests/test_programs/should_fail/duplicate_struct_field/src/main.sw
script;

struct S {
    x: u64,
}

pub fn main() {
    let _ = S{
        x:1,
        x: "a",
    };
}
